--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -27,33 +27,37 @@
     </button>
 
     <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarButtonsExample">
+    <div class="collapse navbar-collapse" id="navbarButtonsExample" style="display: flex; justify-content: space-between;">
       <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item" routerLink="home" routerLinkActive="active"><b>Home</b></li>
-      </ul>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item" routerLink="customers" routerLinkActive="active"><b>Customers</b></li>
-      </ul>
+      <div class="d-flex">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item" routerLink="home" routerLinkActive="active"><b>Home</b></li>
+        </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 20px;">
+          <li class="nav-item" routerLink="customers" routerLinkActive="active"><b>Customers</b></li>
+        </ul>
+      </div>
+
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
         <button
           *ngIf="!isLogin"
           type="button"
-          (click)="login()"
+          (click)="handleOnLogin()"
+          routerLink="login"
           class="btn btn-success px-3 me-2"
         >
           Login
         </button>
-        <button
-          *ngIf="isLogin"
-          type="button"
-          (click)="logout()"
-          class="btn btn-danger px-3 me-2"
-        >
-          Logout
-        </button>
+
+        <div *ngIf="isLogin" class="d-flex align-items-center">
+          <button (click)="logout()" class="btn btn-danger">Logout</button>
+          <div style="display: flex; flex-direction: column; align-items: center; margin-left: 10px;">
+            <img src="assets/images/img_avattar.png" class="avatar img-responsive">
+            <span class="me-3">Hoşgeldin! ({{ (tokenUserModel$ | async)!.userName }})</span>
+          </div>
+        </div>
       </div>
     </div>
     <!-- Collapsible wrapper -->
